@@ -1,6 +1,8 @@
 25 January 2008: Wouter
 	- added tpkg for asynclook and library use. 
 	- allows localhost to be queried when as a library.
+	- fixup race condition between cancel and answer (in case of
+	  really fast answers that beat the cancel).
 
 24 January 2008: Wouter
 	- tested the cancel() function.
